--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,3 +1,15 @@
 <header class="header">
-  
+  <div class="header__navbar">
+    <div class="header__wrapper container">
+      <a class="header__logo logo" href="#"><img src="@img/logo.svg" alt="Site logo"></a>
+      <nav class="header__menu menu">
+        <button class="menu__button button" type="button" data-menu="button">Menu</button>
+        <ul class="menu__list" data-menu="list">
+          <li class="menu__item"><a class="menu__link" href="#">Store</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Collection</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Support</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </header>
