feat: add headline block layout

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <div class="wrapper">
     @@include('../src/html/header.html')
     <main class="page">
-      
+      @@include('../src/html/headline.html')
     </main>
     @@include('../src/html/footer.html')
   </div>
