feat: implement offers section

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     @@include('../src/html/header.html')
     <main class="page">
       @@include('../src/html/headline.html')
+      @@include('../src/html/offers.html')
     </main>
     @@include('../src/html/footer.html')
   </div>
