feat: implement categories section

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <main class="page">
       @@include('../src/html/headline.html')
       @@include('../src/html/offers.html')
+      @@include('../src/html/categories.html')
     </main>
     @@include('../src/html/footer.html')
   </div>
