feat: implement brands section

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       @@include('../src/html/headline.html')
       @@include('../src/html/offers.html')
       @@include('../src/html/categories.html')
+      @@include('../src/html/brands.html')
     </main>
     @@include('../src/html/footer.html')
   </div>
