--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       @@include('../src/html/offers.html')
       @@include('../src/html/categories.html')
       @@include('../src/html/brands.html')
+      @@include('../src/html/benefits.html')
     </main>
     @@include('../src/html/footer.html')
   </div>
