feat: implement feedback section

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style sheets -->
+    <link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/index.css">
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="./favicon.svg">
     <!-- Scripts -->
+    <script src="./libs/swiper/swiper-bundle.min.js" defer></script>
     <script src="./scripts/index.js" defer></script>
     <!-- Extra meta tags -->
     <title>Rhythm Guitar Shop</title>
@@ -22,6 +24,7 @@
       @@include('../src/html/categories.html')
       @@include('../src/html/brands.html')
       @@include('../src/html/benefits.html')
+      @@include('../src/html/feedback.html')
     </main>
     @@include('../src/html/footer.html')
   </div>
