feat: implement cta section

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       @@include('../src/html/brands.html')
       @@include('../src/html/benefits.html')
       @@include('../src/html/feedback.html')
+      @@include('../src/html/cta.html')
     </main>
     @@include('../src/html/footer.html')
   </div>
