--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,3 +1,54 @@
 <footer class="footer">
-  
+  <div class="footer__wrapper container">
+    <div class="footer__inner">
+      <div class="footer__box">
+        <a class="footer__logo logo" href="#"><img src="@img/logo.svg" alt="Site logo"></a>
+        <a class="footer__box-link with-icon" href="mailto:Enquiry@Rhythm.com">Enquiry@Rhythm.com</a>
+        <a class="footer__box-link with-icon" href="#">San Francisco</a>
+      </div>
+      <div class="footer__box">
+        <p class="footer__box-title">Pages</p>
+        <ul class="footer__box-list">
+          <li class="footer__box-item">
+            <a class="footer__box-link" href="#">Store</a>
+          </li>
+          <li class="footer__box-item">
+            <a class="footer__box-link" href="#">Collection</a>
+          </li>
+          <li class="footer__box-item">
+            <a class="footer__box-link" href="#">Support</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__box">
+        <p class="footer__box-title">Product</p>
+        <ul class="footer__box-list">
+          <li class="footer__box-item">
+            <a class="footer__box-link" href="#">Terms</a>
+          </li>
+          <li class="footer__box-item">
+            <a class="footer__box-link" href="#">Privacy Policy</a>
+          </li>
+          <li class="footer__box-item">
+            <a class="footer__box-link" href="#">Copyright</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__box">
+        <p class="footer__box-title">Follow us</p>
+        <div class="footer__box-icons">
+          <a class="footer__box-icon" href="#" title="Facebook">
+            <svg><use href="@img/icons/social-icons.svg#facebook"/></svg>
+          </a> 
+          <a class="footer__box-icon" href="#" title="Twitter">
+            <svg><use href="@img/icons/social-icons.svg#twitter"/></svg>
+          </a> 
+          <a class="footer__box-icon" href="#" title="Instagram">
+            <svg><use href="@img/icons/social-icons.svg#instagram"/></svg>
+          </a> 
+        </div>
+      </div>
+    </div>
+    <p class="footer__copyright">© 2022 Copyright.Rhythm</p>
+  </div>
 </footer>
